# gongmuwon

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: installer-hooks.nsh
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/windows/: main.wxs
services/sidecar/: README.md  pyproject.toml
services/sidecar/packaging/: gongmu-sidecar.spec
services/sidecar/packaging/kordoc/: kordoc_runner.js
services/sidecar/src/gongmu_sidecar/: __main__.py  app.py  context_budget.py  db.py  document_authoring.py  document_parsers.py  document_planning.py  documents.py  embeddings.py  file_organizer.py  graphrag_backends.py  graphrag_ingestion.py  graphrag_models.py  hwpx_writer.py  job_runner.py  jobs.py  knowledge.py  knowledge_wiki.py  llm.py  (+14 more)
services/sidecar/src/gongmu_sidecar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/sidecar/tests/: conftest.py  test_api_flows.py  test_bootstrap.py  test_context_budget.py  test_db_concurrency.py  test_document_authoring.py  test_document_authoring_custom.py  test_document_authoring_hwpx_preview.py  test_document_authoring_revise.py  test_document_topic_derivation.py  test_document_workflow.py  test_embeddings.py  test_file_organizer_apply.py  test_graphrag_backends.py  test_graphrag_document_listing_perf.py  test_graphrag_ingestion.py  test_graphrag_ontology.py  test_graphrag_retrieval.py  test_hwpx_fidelity.py  test_incremental_tagging.py  test_job_runner.py  test_knowledge_diff_rebind.py  test_knowledge_scan_hygiene.py  test_knowledge_search.py  test_knowledge_sources.py  test_knowledge_wiki.py  test_knowledge_wiki_integrity.py  test_kordoc_bridge.py  test_llm_ollama.py  test_llm_providers.py  test_llm_retry.py  test_local_file_search.py  test_personalization_learning.py  test_runtime_entry.py  test_runtime_readiness.py  test_schedule_reminders.py  test_search_ranking.py  test_secrets_vault.py  test_session_file_links.py  test_settings_profiles.py  (+16 more)
(+302 files in other folders)
