[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gongmu-sidecar"
version = "0.1.0"
description = "Gongmu local-first workspace sidecar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "networkx>=3.5",
  "lancedb>=0.25.0",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

