[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gongmu-sidecar"
version = "0.1.0"
description = "Gongmu local-first workspace sidecar"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "networkx>=3.5",
  "chromadb==1.5.9",
  "lancedb>=0.25.0",
  "pypdf>=5.5.0",
  "pyyaml>=6.0.2",
  "python-hwpx==2.9.1",
  "lxml==5.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gongmu_sidecar = [
  "public_doc_templates/**/*"
]

