[package]
name = "gongmu-desktop"
version = "0.1.5"
description = "Gongmu local-first workspace desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
rfd = "0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
